# 2D-Game-Engine-with-Legend-of-Zelda-Game

./: CMakeLists.txt  Doxyfile  README.md  TODO.txt
Resources/Maps/Base_Maps/: Readme.txt
Resources/Shaders/: simple.frag  simple.vert
Resources/SpriteSheets/Zelda_World_Map/: Zelda_Overworld_Map.txt
SpriteSheets/Zelda_World_Map/: Zelda_Overworld_Map.txt
contrib/miniz/: miniz_zip.c
html/: _back_ground_map_8cpp.html  _back_ground_map_8cpp__incl.map  _back_ground_map_8cpp__incl.md5  _back_ground_map_8h.html  _back_ground_map_8h__dep__incl.map  _back_ground_map_8h__dep__incl.md5  _back_ground_map_8h__incl.map  _back_ground_map_8h__incl.md5  _back_ground_map_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _component_8cpp.html  _component_8cpp__incl.map  _component_8cpp__incl.md5  _component_8h.html  _component_8h__dep__incl.map  _component_8h__dep__incl.md5  _component_8h__incl.map  _component_8h__incl.md5  _component_8h_source.html  _compressed_map_sprite_loader_8cpp.html  _compressed_map_sprite_loader_8cpp__incl.map  _compressed_map_sprite_loader_8cpp__incl.md5  _compressed_map_sprite_loader_8h.html  _compressed_map_sprite_loader_8h__dep__incl.map  _compressed_map_sprite_loader_8h__dep__incl.md5  _compressed_map_sprite_loader_8h__incl.map  _compressed_map_sprite_loader_8h__incl.md5  _compressed_map_sprite_loader_8h_source.html  _compressed_map_text_loader_8cpp.html  _compressed_map_text_loader_8cpp__incl.map  _compressed_map_text_loader_8cpp__incl.md5  _compressed_map_text_loader_8h.html  (+397 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_9.js  defines_b.js  defines_d.js  enums_0.js  enumvalues_0.js  (+38 more)
shaders/: simple.frag  simple.vert
src/: Camera.cpp  Camera.h  Component.h  EngineCore.cpp  EngineCore.h  GameObject.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Player.cpp  Player.h  Resources.cpp  Resources.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/engine/: BackGroundMap.cpp  BackGroundMap.h  Camera.cpp  Camera.h  Component.cpp  Component.h  CompressedMapLoader.cpp  CompressedMapLoader.h  CompressedMapSpriteLoader.cpp  CompressedMapSpriteLoader.h  CompressedMapTextLoader.cpp  CompressedMapTextLoader.h  CompressedSpriteLoader.cpp  CompressedSpriteLoader.h  EngineCore.cpp  EngineCore.h  GameObject.cpp  GameObject.h  MapChunks.cpp  MapChunks.h  MapSpriteLoader.cpp  MapSpriteLoader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Object.h  Player.cpp  Player.h  Resource.h  Resources.cpp  Resources.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  (+8 more)
src/game/: Player.cpp  Player.h  main.cpp
src/mapCompressor/: GenerateTileMap.cpp  GenerateTileMap.h
src/mapgenerator/: GenerateTileMap.cpp  GenerateTileMap.h  main.cpp
